select2 bg colour now matches other inputs

--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -169,7 +169,7 @@
 }
 
 .select2-container--default .select2-selection--single {
-    background-color: #fff;
+    background-color: #fafafa;
     border: 1px solid $input-border;
     border-radius: 4px;
 }
@@ -230,7 +230,7 @@
 }
 
 .select2-container--default .select2-selection--multiple {
-    background-color: white;
+    background-color: #fafafa;
     border: 1px solid $input-border;
     border-radius: 4px;
     cursor: text;
