--- a/stylesheets/_component.range-slider.scss
+++ b/stylesheets/_component.range-slider.scss
@@ -18,7 +18,7 @@
         background: color(primary);
         border: 0;
         border-radius: 50%;
-        cursor: ew-resize;
+        cursor: grab;
         height: $gutter-width;
         transition: background .15s ease-in-out;
         width: $gutter-width;
@@ -32,7 +32,7 @@
         background: color(primary);
         border: 0;
         border-radius: 50%;
-        cursor: ew-resize;
+        cursor: grab;
         height: $gutter-width;
         margin-top: 1px;
         transition: background .15s ease-in-out;
@@ -52,7 +52,7 @@
         background: color(primary);
         border: 0;
         border-radius: 50%;
-        cursor: ew-resize;
+        cursor: grab;
         height: $gutter-width;
         transition: background .15s ease-in-out;
         width: $gutter-width;
