--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -31,15 +31,15 @@ $font-family-base:                    $font-family-light !default;
 $font-size-base:                      16px !default;
 $font-size-xxlarge:                   ceil($font-size-base * 2) !default;
 $font-size-xlarge:                    ceil($font-size-base * 1.5) !default;
-$font-size-large:                     ceil($font-size-base * 1.25) !default; // ~18px
-$font-size-small:                     ceil($font-size-base * .85) !default; // ~12px
+$font-size-large:                     18.66px !default; // Meet WCAG 2.1 criteria for 'large text'
+$font-size-medium:                    ceil($font-size-base * .85) !default;
+$font-size-small:                     ceil($font-size-base * .75) !default;
+
 $line-height-base:                    24px !default;
 $line-height-medium:                  ceil($line-height-base * 1.25) !default;
 $line-height-large:                   ceil($line-height-base * 2) !default;
 $line-height-small:                   1.5 !default;
 $line-height-computed:                $line-height-base !default;
-$font-size-small:                     ceil($font-size-base * .75) !default;
-$font-size-medium:                    ceil($font-size-base * .85) !default;
 
 // -----------------------------------------------------------------------------
 //  Columnar grid
