--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -307,6 +307,7 @@ td.table__form .rules + .form__group:last-of-type {
     $rule-color-and:    #f7d183;
     $rule-color-or:     #9d7ee3;
     $rule-color-return: #7dbc8e;
+    $rule-color-help:   #b54745;
 
     border-left: 4px solid color(gray, lightest);
     padding-left: 20px;
@@ -597,6 +598,15 @@ td.table__form .rules + .form__group:last-of-type {
 
     .rule-block__controls {
         margin-top: .5em;
+    }
+
+    // Fix alignment when help-blocks are present
+    .rule-block__control {
+        vertical-align: top;
+    }
+
+    .form__group:not(.form__group--partial-state).has-error .help-block {
+        color: $rule-color-help;
     }
 
     .remove__control {
