increase border colour of main search to meet AA

--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -1,5 +1,5 @@
 .main-search {
-    border: 1px solid #d7d7d7;
+    border: 1px solid $input-border;
     border-radius: 4px;
     clear: both;
     display: block;
