Fixed mobile swipe issue and padding on close sidebar button

--- a/stylesheets/_component.tab-help.scss
+++ b/stylesheets/_component.tab-help.scss
@@ -93,6 +93,7 @@ $nav-color-dark:  darken(color(jadu-blue, dark), 5%) !default;
     border: 0;
     font-size: $font-size-xlarge;
     margin-bottom: 10px;
+    padding-right: 0;
     position: absolute;
     right: 10px;
     text-decoration: none;
