--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -23,6 +23,7 @@ body {
   height: 100%;
   // Allow any content to clear the fixed footer
   margin: 0;
+  overflow-x: hidden;
   position: relative;
   width: 100%;
 
