--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -677,16 +677,12 @@
 .select2-container--classic .select2-results__group {
     cursor: default;
     display: block;
-    padding: 6p
-    x;
+    padding: 6px;
 }
 
 .select2-container--classic.select2-container--open .select2-dropdown {
     border-color: #5897fb;
 }
-
-
-
 
 span.select2-selection.select2-selection--single {
     height: $input-height-base;
@@ -708,7 +704,7 @@ span.select2-selection.select2-selection--single {
 
 .select2-selection {
     background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAFZJREFUOBFjYBgFVA+Bp0AT/xPAT/DZ6gWU/IPHgN9AOQ98BoDkMoAYlytSCWmGyXdhMaQNJkkMzQhUtBLJkGVANkiMJMABVL0PiHcBMTtJOkcVkxYCADK5Iu6w+agDAAAAAElFTkSuQmCC');
-    background-position: 97%;
+    background-position: calc(100% - 5px);
     background-repeat: no-repeat;
 }
 
