--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -632,4 +632,17 @@ td.table__form .rules + .form__group:last-of-type {
             color: color(text);
         }
     }
+
+    .rule-block__text {
+        margin: 12px;
+    }
+}
+
+.rules-container--no-default {
+    border-left: 0;
+
+    &::after,
+    &::before {
+        display: none;
+    }
 }
