Move component type calls to the src file

--- a/views/symfony/tab.html.twig
+++ b/views/symfony/tab.html.twig
@@ -56,5 +56,5 @@
             {{ form_row(symfonyForm.Submit) }}
         </fieldset>
     
-    {{ form_end(symfonyForm) }}
+    {{ form_end(symfonyForm, {'render_rest': false}) }}
 {% endblock %}
