Add additional type of time field outputs

--- a/views/symfony/tab.html.twig
+++ b/views/symfony/tab.html.twig
@@ -38,7 +38,9 @@
             {{ form_row(symfonyForm.Date) }}
             {{ form_row(symfonyForm.DateInterval) }}
             {{ form_row(symfonyForm.DateTime) }}
-            {{ form_row(symfonyForm.Time) }}
+            {{ form_row(symfonyForm.TimeChoice) }}
+            {{ form_row(symfonyForm.TimeText) }}
+            {{ form_row(symfonyForm.TimeSingleText) }}
             {{ form_row(symfonyForm.Birthday) }}
         </fieldset>
 
