--- a/views/symfony/tab.html.twig
+++ b/views/symfony/tab.html.twig
@@ -60,6 +60,8 @@
 
         <fieldset>
             <legend class="legend">Non-Symfony Standard</legend>
+            {{ form_row(symfonyForm.TextfieldHelpText) }}
+            {{ form_row(symfonyForm.TextfieldHelpHTML) }}
             {{ form_row(symfonyForm.TextfieldPrependAppend) }}
             {{ form_row(symfonyForm.TextfieldPrependAppendIcon) }}
             {{ form_row(symfonyForm.ToggleSwitch) }}
