Add ability for button widget to apply appropriate classes
This uses Pulsar’s attributeParser which should work with the attr array

--- a/views/pulsar/v2/forms.html.twig
+++ b/views/pulsar/v2/forms.html.twig
@@ -256,6 +256,22 @@
     </div>
 {% endblock button_row %}
 
+{%- block button_widget -%}
+    {%- if label is empty -%}
+        {%- if label_format is not empty -%}
+            {% set label = label_format|replace({
+                '%name%': name,
+                '%id%': id,
+            }) %}
+        {%- elseif label is same as(false) -%}
+            {% set translation_domain = false %}
+        {%- else -%}
+            {% set label = name|humanize %}
+        {%- endif -%}
+    {%- endif -%}
+    <button{{ attributes(attr|defaults({'class': 'btn'})) }} type="{{ type|default('button') }}" {{ block('button_attributes') }}>{{ translation_domain is same as(false) ? label : label|trans({}, translation_domain) }}</button>
+{%- endblock button_widget -%}
+
 {# Misc #}
 
 {# We add the form class to the form :) #}
