Attempt to set up phpunit tests for symfony output

--- a/views/lexicon/forms/all.html.twig
+++ b/views/lexicon/forms/all.html.twig
@@ -23,6 +23,18 @@
     }}
     {% set i = i + 1 %}
 
+    <div class="form__group"><label class="control__label required">Periods&nbsp;<span class="required-indicator" data-toggle="tooltips" title="" data-original-title="required">*</span></label><div class="controls"><div class="table-container"><table class="table"><thead><tr><th>Day</th><th class="u-text-align-center">Bookable</th><th>Periods</th></tr></thead><tbody><tr><td>Monday</td><td class="u-text-align-center"><i title="" data-placement="top" data-toggle="tooltips" aria-hidden="true" class="icon-check-circle status--icon is-active" data-original-title="Bookable"></i></td><td><button class="btn btn--small">All Day</button>
+                &nbsp;
+                        <button class="btn btn--small"><i aria-hidden="true" class="icon-plus"></i></button></td></tr><tr><td>Tuesday</td><td class="u-text-align-center"><i title="" data-placement="top" data-toggle="tooltips" aria-hidden="true" class="icon-check-circle status--icon is-active" data-original-title="Bookable"></i></td><td><button class="btn btn--small">All Day</button>
+                &nbsp;
+                        <button class="btn btn--small"><i aria-hidden="true" class="icon-plus"></i></button></td></tr><tr><td>Wednesday</td><td class="u-text-align-center"><i title="" data-placement="top" data-toggle="tooltips" aria-hidden="true" class="icon-check-circle status--icon is-active" data-original-title="Bookable"></i></td><td><button class="btn btn--small">All Day</button>
+                &nbsp;
+                        <button class="btn btn--small"><i aria-hidden="true" class="icon-plus"></i></button></td></tr><tr><td>Thursday</td><td class="u-text-align-center"><i title="" data-placement="top" data-toggle="tooltips" aria-hidden="true" class="icon-check-circle status--icon is-active" data-original-title="Bookable"></i></td><td><button class="btn btn--small">All Day</button>
+                &nbsp;
+                        <button class="btn btn--small"><i aria-hidden="true" class="icon-plus"></i></button></td></tr><tr><td>Friday</td><td class="u-text-align-center"><i title="" data-placement="top" data-toggle="tooltips" aria-hidden="true" class="icon-check-circle status--icon is-active" data-original-title="Bookable"></i></td><td><button class="btn btn--small">All Day</button>
+                &nbsp;
+                        <button class="btn btn--small"><i aria-hidden="true" class="icon-plus"></i></button></td></tr><tr><td>Saturday</td><td class="u-text-align-center"><i title="" data-placement="top" data-toggle="tooltips" aria-hidden="true" class="icon-times-rectangle status--icon is-offline" data-original-title="Not Bookable"></i></td><td><button class="btn btn--small"><i aria-hidden="true" class="icon-plus"></i></button></td></tr><tr><td>Sunday</td><td class="u-text-align-center"><i title="" data-placement="top" data-toggle="tooltips" aria-hidden="true" class="icon-times-rectangle status--icon is-offline" data-original-title="Not Bookable"></i></td><td><button class="btn btn--small"><i aria-hidden="true" class="icon-plus"></i></button></td></tr></tbody></table></div></div></div>
+
     {{
         form.password({
             'label': 'Password',
