--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-help.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-help.html.twig
@@ -2,6 +2,9 @@
 {% block body %}
 {{
     form.text({
+		'label': 'foo',
+        'name': 'form[field]',
+        'id': 'form_field',
     	'help': 'my help text'
 	})
 }}
