--- a/views/pulsar/v2/forms.html.twig
+++ b/views/pulsar/v2/forms.html.twig
@@ -1,51 +1,5 @@
 {% extends "form_div_layout.html.twig" %}
 
-{% block form_widget_simple %}
-
-    {# Stop hidden fields having invalid required attibute #}
-    {% if type is defined and type == 'hidden' %}
-        {% set required = false %}
-    {% endif %}
-
-    {% if prependIcon is defined and prependIcon is not empty %}
-        {% set attr = attr|merge({'data-prepend-icon': prependIcon}) %}
-    {% endif %}
-
-    {% if appendIcon is defined and appendIcon is not empty %}
-        {% set attr = attr|merge({'data-append-icon': appendIcon}) %}
-    {% endif %}
-
-    {% if attr['data-datepicker'] is defined %}
-        {% set attr = attr|merge({'data-append-icon': 'icon-calendar'}) %}
-    {% endif %}
-
-    {% if attr.class is defined and 'colorpicker' in attr.class %}
-        {% set attr = attr|merge({'data-prepend': '#'}) %}
-    {% endif %}
-
-    
-
-    {% if attr['data-prepend'] is defined or attr['data-append'] is defined or attr['data-prepend-icon'] is defined or attr['data-append-icon'] is defined %}
-        <div class="input-group">
-            {% if attr['data-prepend-icon'] is defined %}
-                <div class="input-group-addon"><i class="{{ attr['data-prepend-icon'] }} icon-fw"></i></div>
-            {% endif %}
-            {% if attr['data-prepend'] is defined %}
-                <div class="input-group-addon">{{ attr['data-prepend'] }}</div>
-            {% endif %}
-            {{ parent() }}
-            {% if attr['data-append'] is defined %}
-                <div class="input-group-addon">{{ attr['data-append'] }}</div>
-            {% endif %}
-            {% if attr['data-append-icon'] is defined %}
-                <div class="input-group-addon"><i class="{{ attr['data-append-icon'] }} icon-fw"></i></div>
-            {% endif %}
-        </div>
-    {% else %}
-        {%- set type = type|default('text') -%}
-        <input {{ block('widget_attributes') }} type="{{ type }}" class="{{ attr.class|default('') ~ ' form__control'|trim }}" {% if value is not empty %}value="{{ value }}" {% endif %}/>
-    {% endif %}
-{% endblock form_widget_simple %}
 
 {# Remove the surrounding div #}
 {% block form_widget_compound %}
@@ -173,6 +127,14 @@
             {% set attr = attr|merge({'data-toggle-switch': 'true'}) %}
         {% endif %}
 
+        {% set helpText = null %}
+
+        {% if attr['data-help-text'] is defined %}
+            {% set helpText = attr['data-help-text'] %}
+        {% elseif attr['data-help-html'] is defined %}
+            {% set helpText = attr['data-help-html']|raw %}
+        {% endif %}
+
         <div class="form__group{% if errors|length > 0 %} has-error{% endif %}{% if attr.class is defined %} {{ attr.class }}{% endif %}{% if attr['data-toggle-switch'] is defined %} form__group--toggle{% endif %}">
             {% if attr['data-toggle-switch'] is defined %}
             <label class="toggle-switch-wrapper-label" for="{{ id }}">
@@ -197,18 +159,8 @@
                     {% set describedByIds = describedByIds|merge(errorIds) %}
                 {% endif %}
 
-                {% if helpText is defined and helpText is not null %}
-                    {% set attr = attr|merge({'help_text': helpText}) %}
-                {% endif %}
-
                 {# If help text are present, build help block guids  #}
-                {% if attr.help_text is defined and attr.help_text is not null %}
-                    {# need to separate out the help block guids #}
-                    {% set helpId = 'guid-' ~ random() %}
-
-                    {# Merge into describedByIds for aria-describedby on the input #}
-                    {% set describedByIds = describedByIds|merge([helpId]) %}
-                {% elseif attr.help_html is defined and attr.help_html is not null %}
+                {% if helpText is defined and helpText is not null %}
                     {# need to separate out the help block guids #}
                     {% set helpId = 'guid-' ~ random() %}
 
@@ -226,7 +178,7 @@
                     {% set attr = attr|merge({'class': inputClass|trim}) %}
                 {% endif %}
 
-                {{ form_widget(form) }}
+                {{ form_widget(form, {attr: attr}) }}
 
                 {% if attr['data-toggle-switch'] is defined %}
                     <span class="toggle-switch-label"></span>
@@ -240,16 +192,8 @@
                 {% endif %}
 
                 {# Help #}
-                {% if attr.help_text is defined and attr.help_text is not null %}
-                    {% set attr = attr|merge({'data-help-text': attr.help_text}) %}
-                {% elseif attr.help_html is defined and attr.help_html is not null %}
-                    {% set attr = attr|merge({'data-help-text': attr.help_html}) %}
-                {% endif %}
-
-                {% if attr['data-help-text'] is defined %}
-                    <p class="help-block" id="{{ helpId }}">{{ attr['data-help-text'] }}</p>
-                {% elseif attr['data-help-html'] is defined %}
-                    <p class="help-block" id="{{ helpId }}">{{ attr['data-help-html']|raw }}</p>
+                {% if helpText is defined and helpText is not null %}
+                    <span class="help-block" id="{{ helpId }}">{{ helpText }}</span>
                 {% endif %}
             </div>
             {% if attr['data-toggle-switch'] is defined %}
@@ -258,6 +202,83 @@
         </div>
     {% endspaceless %}
 {% endblock form_row %}
+
+{% block form_widget_simple %}
+    {# Stop hidden fields having invalid required attibute #}
+    {% if type is defined and type == 'hidden' %}
+        {% set required = false %}
+    {% endif %}
+
+    {% if id is defined and id is not empty %}
+        {% set attr = attr|merge({'id': id}) %}
+    {% endif %}
+
+    {% if full_name is defined and full_name is not empty %}
+        {% set attr = attr|merge({'name': full_name}) %}
+    {% endif %}
+
+    {% if prependIcon is defined and prependIcon is not empty %}
+        {% set attr = attr|merge({'data-prepend-icon': prependIcon}) %}
+    {% endif %}
+
+    {% if appendIcon is defined and appendIcon is not empty %}
+        {% set attr = attr|merge({'data-append-icon': appendIcon}) %}
+    {% endif %}
+
+    {% if attr['data-datepicker'] is defined %}
+        {% set attr = attr|merge({'data-append-icon': 'icon-calendar'}) %}
+    {% endif %}
+
+    {% if attr.class is defined and 'colorpicker' in attr.class %}
+        {% set attr = attr|merge({'data-prepend': '#'}) %}
+    {% endif %}
+
+    {% if attr['data-prepend'] is defined or attr['data-append'] is defined or attr['data-prepend-icon'] is defined or attr['data-append-icon'] is defined %}
+        <div class="input-group">
+            {% if attr['data-prepend-icon'] is defined %}
+                <div class="input-group-addon"><i class="{{ attr['data-prepend-icon'] }} icon-fw"></i></div>
+            {% endif %}
+            {% if attr['data-prepend'] is defined %}
+                <div class="input-group-addon">{{ attr['data-prepend'] }}</div>
+            {% endif %}
+            {{ parent() }}
+            {% if attr['data-append'] is defined %}
+                <div class="input-group-addon">{{ attr['data-append'] }}</div>
+            {% endif %}
+            {% if attr['data-append-icon'] is defined %}
+                <div class="input-group-addon"><i class="{{ attr['data-append-icon'] }} icon-fw"></i></div>
+            {% endif %}
+        </div>
+    {% else %}
+        {% set attr = attr|merge({'type': type|default('text')}) %}
+        {# {{ attributes(attr|exclude('data-help-text')|defaults({'class': 'form__control'})) }} #}
+        <input{{ attributes(attr|exclude('data-help-text')|defaults({'class': 'form__control'})) }} {% if value is not empty %}value="{{ value }}" {% endif %}/>
+    {% endif %}
+{% endblock form_widget_simple %}
+
+
+{%- block widget_attributes -%}
+    id="{{ id }}" name="{{ full_name }}"
+    {%- if read_only %} readonly="readonly"{% endif -%}
+    {%- if disabled %} disabled="disabled"{% endif -%}
+    {%- if required %} required="required"{% endif -%}
+    
+    {%- for attrname, attrvalue in attr if 'readonly' != attrname or not read_only -%}
+        {{- " " -}}
+        {%- if attrname in ['data-help-text'] -%}
+
+        {%- elseif attrname in ['placeholder', 'title'] -%}
+            {{- attrname }}="{{ translation_domain is same as(false) ? attrvalue : attrvalue|trans({}, translation_domain) }}"
+        {%- elseif attrvalue is same as(true) -%}
+            {{- attrname }}="{{ attrname }}"
+        {%- elseif attrvalue is not same as(false) -%}
+            {{- attrname }}="{{ attrvalue }}"
+        {%- else -%}
+            !!!
+        {%- endif -%}
+    {%- endfor -%}
+{%- endblock widget_attributes -%}
+
 
 {% block button_row %}
     <div class="form__group">
@@ -332,3 +353,4 @@
         {% endfor %}
     {% endspaceless %}
 {% endblock form_rows_repeated %}
+
