Add test for TextType guidance

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-guidance.html.twig
@@ -3,6 +3,8 @@
 {{
     form.text({
         'label': 'foo',
+        'id': 'form_field',
+        'name': 'form[field]',
         'guidance': 'foo <span class="bar">bar</span>'
     })
 }}
