--- a/views/symfony/text.html.twig
+++ b/views/symfony/text.html.twig
@@ -10,6 +10,7 @@
     {{ form_row(textForm.required) }}
     {{ form_row(textForm.placeholder) }}
     {{ form_row(textForm.helpText) }}
+    {{ form_row(textForm.helpHtml) }}
     {{ form_row(textForm.guidanceText) }}
     {{ form_row(textForm.guidanceTextRequired) }}
 
